--- a/padrao.APP/src/app/modules/excursoes/lista-excursoes/lista-excursoes.component.html
+++ b/padrao.APP/src/app/modules/excursoes/lista-excursoes/lista-excursoes.component.html
@@ -174,6 +174,11 @@
                                                 <mat-icon
                                                     matTooltip="Editar contrato"
                                                     svgIcon="heroicons_outline:document-text"
+                                                    (click)="
+                                                        this.modalEditarContrato(
+                                                            item
+                                                        )
+                                                    "
                                                 ></mat-icon>
                                             </div>
                                         </div>
